chore(engine): remove use of complex object in engine